# RoundTable

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  compose.yml  deploy.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: launch.json
.github/workflows/: ci.yml
app/: __init__.py  config.py  db.py  github_integration.py  live.py  main.py  mcp_server.py  notifications.py  rate_limit.py  security.py  store.py
app/static/: app.js  styles.css
app/store/: __init__.py  _accounts.py  _action_log.py  _board.py  _integrations.py  _notification_outbox.py  _policies.py  _projects.py  _read_models.py  _sprints.py  _statistics.py  _tickets.py  _users.py  _validation.py
app/templates/: base.html  board.html  integrations_github.html  login.html  project_settings.html  project_sprints.html  project_stats.html  projects.html  settings_mcp.html  settings_notifications.html  ticket.html
deploy/: env.deploy.example  roundtable.service
docs/: architecture.md  deployment-separation.md  development_rules.md  load-testing.md
tests/: conftest.py  test_architecture_boundaries.py  test_config_security.py  test_core.py  test_db.py  test_frontend_contracts.py  test_github_and_mcp.py  test_health.py  test_live.py  test_notifications.py  test_rate_limit.py  test_statistics.py  test_statistics_time.py  test_store_facade.py  test_ticket_events.py
tools/: load_test.py
